Change implementation of TabStripModel::closing_all().

The semantics of TabStripModel::closing_all() [both in the header comments, and
in usage by callsites] is that it should only be set to |true| when
CloseAllTabs() has been called.

However, it was also being set to |true| in
TabStripModel::DetachWebContentsImpl. This was incorrect. It appears to have
been present in the initial commit of chrome/ to the Chromium repository:
1c175efa82a7733e5816aae73656ad365006db68 [formerly 09911bf300f1a419907a9412154760efd0b7abc3].

Bug: 871977
Change-Id: Ied0dcb79611f1c2b144657dec897551d3734a38a
Reviewed-on: https://chromium-review.googlesource.com/1169622
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582130}
Former-commit-id: 25919fcea95287f1be0ac0f686cbfc118faa1aca